fix(css): spacing issue in table

--- a/src/css/prosemirror.scss
+++ b/src/css/prosemirror.scss
@@ -6,7 +6,7 @@
 @use 'sass:selector';
 
 /**
- * 
+ *
  */
 div.ProseMirror {
 	height: 100%;
@@ -337,12 +337,13 @@ div.ProseMirror {
 			border-left: 0;
 			vertical-align: top;
 			max-width: 100%;
+			line-height: var(--default-clickable-area);
 			&:first-child {
 				border-left: 1px solid var(--table-color-border);
 			}
 		}
 		td {
-			padding: 0.5em 0.75em;
+			padding: 0 0 0 0.75em;
 			border-top: 0;
 			color: var(--color-main-text);
 		}
